# shred_vs_grpc

./: .env  .gitignore  Cargo.toml  README.md
src/: grpc.rs  main.rs  shred.rs  speed.rs
