[package]
name = "shred-vs-grpc"
version = "0.1.0"
edition = "2021"
default-run = "shred-vs-grpc"

[[bin]]
name = "grpc"
path = "src/grpc.rs"

[[bin]]
name = "shred"
path = "src/shred.rs"

[[bin]]
name = "shred-vs-grpc"
path = "src/main.rs"

[[bin]]
name = "s"
path = "src/speed.rs"

[dependencies]
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
futures-util = "0.3.30"
dotenvy = "0.15.7"
pretty_env_logger = "0.5.0"
log = "0.4.26"
chrono = "0.4.40"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
jito-protos = { path = "src/jito_protos" }
bincode = "1.3.3"
solana-entry = "2.2.2"
